tests/good/types/2.tam
; Generated code for tests/good/types/2.moc.
; Do not modify by hand
; no code
