tests/bad/types/2.tam
; Generated code for tests/bad/types/2.moc.
; Do not modify by hand
; no code
